# DevGen

./: README.md  generate_json.py  simple_code.py  start_fuzz.py
Case_Repair_Library/: example.json  step.json
Case_Repair_Library/already_exists/: example01.json
Case_Repair_Library/assertion_failed/: example01.json  example02.json
Case_Repair_Library/invalid_signature/: example01.json
Case_Repair_Library/ioremap_failed/: example01.json  example02.json  example03.json
Case_Repair_Library/no_MMIO_resource/: example01.json
Case_Repair_Library/no_such_device/: example01.json  example02.json
Case_Repair_Library/not_found/: example02.json  example03.json
Case_Repair_Library/not_found_in_directory/: example01.json
Case_Repair_Library/probe_failed/: example01.json
Case_Repair_Library/table & pba overlap/: example01.json
Case_Repair_Library/type_already_registered/: example01.json
DevGen_Core/: README.md  load_db.py  pyproject.toml
DevGen_Core/config/: default.yaml
DevGen_Core/prompts/: full_output.txt  help.txt  modify_after_build_fail.txt  modify_after_build_fail_iteration.txt  pci_h.txt  pci_template.txt  step0.txt  step1.txt  step1_examples.txt  step1_iteration.txt  step2.txt  step2_iteration.txt  step3.txt  step3_iteration.txt  step4.txt  step4_help.txt  system.txt  three_examples.txt  two_examples.txt
DevGen_Core/src/vdm/: main.py
DevGen_Core/src/vdm/core/: context.py  driver_info.py  examples_loader.py  llm_client.py  prompt_manager.py
DevGen_Core/src/vdm/services/: build_qemu.py  clangd_checker.py  config_loader.py  execute_ssh_commands_and_get_files.py  run_qemu.py
DevGen_Core/src/vdm/step/: modify_after_build_fail.py  modify_compile_run.py  step1.py  step2.py  step3.py  step4.py
DevGen_Core/src/vdm/utils/: file_op.py  fill_qemu_run_template.py  get_capital_driver_name.py  kill_process.py  logger.py  retry_api_call.py  save_logs.py
config/: enable_syscalls.json  gemini3-pro-fuzz.json  gpt-5.1-fuzz.json  qewn3-fuzz.json
result/GPT-5.1/: 8139cp_pci.c  8139too_pci.c  8250_lpss_pci.c  8250_mid_pci.c  Southbridge_pci.c  aectc_pci.c  ahci_pci.c  bochs_drm_pci.c  bt878_pci.c  bttv_pci.c  c6xxvf_pci.c  carminefb_pci.c  cx18_pci.c  cx88_audio_pci.c  de2104x_pci.c  ec_bhf_pci.c  efa_pci.c  fealnx_pci.c  gxt4500_pci.c  hpilo_pci.c  i740fb_pci.c  ie31200_edac_pci.c  intel_lpss_pci.c  intel_qep_pci.c  iosf_mbi_pci_pci.c  meson.build  ml_ioh_gpio_pci.c  mxser_pci.c  ns83820_pci.c  pcwd_pci_pci.c  pdc_adma_pci.c  phantom_pci.c  r852_pci.c  sata_sil24_pci.c  sm501_pci.c  smtcfb_pci.c  sof_audio_pci_intel_cnl_pci.c  sof_audio_pci_intel_mtl_pci.c  sof_audio_pci_intel_skl_pci.c  uli526x_pci.c  (+1 more)
result/Gemini-3-Pro/: 8139cp_pci.c  8250_lpss_pci.c  8250_mid_pci.c  Kconfig  RDC321x_Southbridge_pci.c  acard_ahci_pci.c  aectc_pci.c  ahci_pci.c  bochs_drm_pci.c  bt878_pci.c  carminefb_pci.c  cx88_audio_pci.c  de2104x_pci.c  ec_bhf_pci.c  efa_pci.c  fealnx_pci.c  gxt4500_pci.c  hpilo_pci.c  i740fb_pci.c  ie31200_edac_pci.c  intel_lpss_pci.c  iosf_mbi_pci_pci.c  meson.build  ml_ioh_gpio_pci.c  mxser_pci.c  pata_ninja32_pci.c  pdc_adma_pci.c  phantom_pci.c  r852_pci.c  sata_nv_pci.c  sata_sil24_pci.c  sm501_pci.c  smtcfb_pci.c  sof_audio_pci_intel_mtl_pci.c  sof_audio_pci_intel_skl_pci.c  uli526x_pci.c
result/Qwen3-Max/: .c  8139too_pci.c  8250_lpss_pci.c  8250_mid_pci.c  Makefile.objs  RDC321x Southbridge_pci.c  acard_ahci_pci.c  aectc_pci.c  arch_x86_platform_intel_iosf_mbi.c  bochs_drm_pci.c  bt878_pci.c  bttv_pci.c  carminefb_pci.c  cx88_audio_pci.c  de2104x_pci.c  drivers_accel_habanalabs_common_habanalabs_drv.c  drivers_accel_ivpu_ivpu_drv.c  drivers_accel_qaic_qaic_drv.c  (+705 more)
static_analyze/: README.md
(+1252 files in other folders)
