system_ss.add(when: 'CONFIG_8139CP', if_true: files('8139cp_pci.c'))
system_ss.add(when: 'CONFIG_8139TOO', if_true: files('8139too_pci.c'))
system_ss.add(when: 'CONFIG_8250_LPSS', if_true: files('8250_lpss_pci.c'))
system_ss.add(when: 'CONFIG_8250_MID', if_true: files('8250_mid_pci.c'))
system_ss.add(when: 'CONFIG_AECTC', if_true: files('aectc_pci.c'))
system_ss.add(when: 'CONFIG_AHCI', if_true: files('ahci_pci.c'))
system_ss.add(when: 'CONFIG_BOCHS_DRM', if_true: files('bochs_drm_pci.c'))
system_ss.add(when: 'CONFIG_BT878', if_true: files('bt878_pci.c'))
system_ss.add(when: 'CONFIG_BTTV', if_true: files('bttv_pci.c'))
system_ss.add(when: 'CONFIG_C6XXVF', if_true: files('c6xxvf_pci.c'))
system_ss.add(when: 'CONFIG_CARMINEFB', if_true: files('carminefb_pci.c'))
system_ss.add(when: 'CONFIG_CX18', if_true: files('cx18_pci.c'))
system_ss.add(when: 'CONFIG_CX88_AUDIO', if_true: files('cx88_audio_pci.c'))
system_ss.add(when: 'CONFIG_DE2104X', if_true: files('de2104x_pci.c'))
system_ss.add(when: 'CONFIG_EC_BHF', if_true: files('ec_bhf_pci.c'))
system_ss.add(when: 'CONFIG_EFA', if_true: files('efa_pci.c'))
system_ss.add(when: 'CONFIG_FEALNX', if_true: files('fealnx_pci.c'))
system_ss.add(when: 'CONFIG_GXT4500', if_true: files('gxt4500_pci.c'))
system_ss.add(when: 'CONFIG_HPILO', if_true: files('hpilo_pci.c'))
system_ss.add(when: 'CONFIG_I740FB', if_true: files('i740fb_pci.c'))
system_ss.add(when: 'CONFIG_IE31200_EDAC', if_true: files('ie31200_edac_pci.c'))
system_ss.add(when: 'CONFIG_INTEL_LPSS', if_true: files('intel_lpss_pci.c'))
system_ss.add(when: 'CONFIG_INTEL_QEP', if_true: files('intel_qep_pci.c'))
system_ss.add(when: 'CONFIG_IOSF_MBI_PCI', if_true: files('iosf_mbi_pci_pci.c'))
system_ss.add(when: 'CONFIG_ML_IOH_GPIO', if_true: files('ml_ioh_gpio_pci.c'))
system_ss.add(when: 'CONFIG_MXSER', if_true: files('mxser_pci.c'))
system_ss.add(when: 'CONFIG_NS83820', if_true: files('ns83820_pci.c'))
system_ss.add(when: 'CONFIG_PCWD_PCI', if_true: files('pcwd_pci_pci.c'))
system_ss.add(when: 'CONFIG_PDC_ADMA', if_true: files('pdc_adma_pci.c'))
system_ss.add(when: 'CONFIG_PHANTOM', if_true: files('phantom_pci.c'))
system_ss.add(when: 'CONFIG_R852', if_true: files('r852_pci.c'))
system_ss.add(when: 'CONFIG_SATA_SIL24', if_true: files('sata_sil24_pci.c'))
system_ss.add(when: 'CONFIG_SM501', if_true: files('sm501_pci.c'))
system_ss.add(when: 'CONFIG_SMTCFB', if_true: files('smtcfb_pci.c'))
system_ss.add(when: 'CONFIG_SOF_AUDIO_PCI_INTEL_MTL', if_true: files('sof_audio_pci_intel_mtl_pci.c'))
system_ss.add(when: 'CONFIG_SOF_AUDIO_PCI_INTEL_SKL', if_true: files('sof_audio_pci_intel_skl_pci.c'))
system_ss.add(when: 'CONFIG_DDBRIDGE', if_true: files('Southbridge_pci.c'))
system_ss.add(when: 'CONFIG_ULI526X', if_true: files('uli526x_pci.c'))
system_ss.add(when: 'CONFIG_WDT_PCI', if_true: files('wdt_pci_pci.c'))

system_ss.add(when: 'CONFIG_SOF_AUDIO_PCI_INTEL_CNL', if_true: files('sof_audio_pci_intel_cnl_pci.c'))

